--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         <section class="profile">
             <img src="./assets/image/photo.jpg">
             <div>
-                <h1>Ivan Trubchaninov</h1>
-                <p id="bio">Backend developer, now work at <a href="https://lovata.com/"
-                        target="_blank">Lovata</a></p>
-                <p id="email">🕌 Antalya, Turkey ⏲ +3 (UTC)</p>
-                <p id="email">✉️ i.trubchaninov@lovata.com</p>
+                <h1>Backend developer</h1>
+                <p id="bio">Ivan Trubchaninov, now work at EsteIt</p>
+                <p id="email">🕌 Belgrad, Serbia ⏲ +2 (UTC)</p>
+                <p id="email">✉️ itrubchaninov@list.ru</p>
                 <p id="telegram">✒️ @trubiv (telegram)</p>
             </div>
         </section>
@@ -36,7 +35,7 @@
             <div class="stack">
                 <ul>
                     <li><span>Lang:</span>PHP, NodeJS, Python</li>
-                    <li><span>Framework:</span>Laravel,Django</li>
+                    <li><span>Framework:</span>Laravel,Symfony</li>
                     <li><span>Lib:</span>Vue, Nest.js</li>
                     <li><span>DB:</span>MySQL, Postgres</li>
                 </ul>
@@ -48,8 +47,19 @@
 
             <hr>
             <div class="item">
+                <h3> Backend developer | EastIT</h3>
+                <p>11/2021 - Present</p>
+                <p>Work on 4cms.</p>
+                <ul>
+                    <li>Work with multiaccount marketplace app.</li>
+                    <li>Config docker env</li>
+                </ul>
+            </div>
+
+            <hr>
+            <div class="item">
                 <h3> Backend developer | Lovata</h3>
-                <p>10/2021 - Present</p>
+                <p>10/2021 - 11/2022</p>
                 <p>Work on company projects, such as websites and services. Additional, developed plugins for the shopaholic ecosystem.</p>
                 <ul>
                     <li>Support OctoberCMS sites</li>
