--- a/index.html
+++ b/index.html
@@ -13,33 +13,43 @@
             <img src="./assets/image/photo.jpg">
             <div>
                 <h1>Backend developer</h1>
-                <p id="bio">Ivan Trubchaninov, now work at EsteIt</p>
-                <p id="email">🕌 Belgrad, Serbia ⏲ +2 (UTC)</p>
-                <p id="email">✉️ itrubchaninov@list.ru</p>
+                <p id="bio">Ivan Trubchaninov</p>
+                <p id="location">🕌 Belgrad, Serbia ⏲ +2 (UTC)</p>
+                <p id="email">✉️ trubiv@gmail.com</p>
                 <p id="telegram">✒️ @trubiv (telegram)</p>
+                <a href="./Backend Ivan Trubchaninov (1).pdf" download class="download-btn">📄 Download CV</a>
             </div>
         </section>
 
         <section class="qualifications">
-            <h2>Skills & Qualifications</h2>
-            <ul>
-                <li>✔️ 5 Years experience with backend development by PHP</li>
-                <li>✔️ Laravel and OctoberCMS profile</li>
-                <li>✔️ Team leadership and application design</li>
-                <li>✔️ Mentoring and social projects</li>
-            </ul>
+            <h2>About</h2>
+            <p>Over 5 years of experience in e-commerce, 2 years working with high-load systems. Successfully managed projects and development teams. Actively involved in implementing Agile methodologies, including task estimation and retrospectives.</p>
+            <p>Experience in public speaking, hackathon participation, worked with a society for helping the disabled, taught programming and mentored.</p>
         </section>
 
         <section>
-            <h2>Tech stack</h2>
+            <h2>Expertise</h2>
             <div class="stack">
                 <ul>
-                    <li><span>Lang:</span>PHP, NodeJS, Python</li>
-                    <li><span>Framework:</span>Laravel,Symfony</li>
-                    <li><span>Lib:</span>Vue, Nest.js</li>
-                    <li><span>DB:</span>MySQL, Postgres</li>
+                    <li><span>Lang:</span> PHP, Nodejs, Python</li>
+                    <li><span>Framework:</span> Symfony, Laravel, Django</li>
+                    <li><span>DB:</span> PostgreSQL, Redis, Elastic, ClickHouse</li>
+                    <li><span>DevOps:</span> Docker, Github Actions, Bitbucket pipeline</li>
+                    <li><span>Message:</span> Kafka, Avro, Temporal</li>
+                    <li><span>Realtime:</span> Websocket, Ratchet/Workerman, Socket.IO, WebRTC</li>
+                    <li><span>Architecture:</span> DDD, CQRS, Clean architecture</li>
+                    <li><span>API:</span> REST, GraphQL, SOAP</li>
+                    <li><span>Telephony:</span> Asterisk, PAMI</li>
                 </ul>
             </div>
+        </section>
+
+        <section>
+            <h2>Languages</h2>
+            <ul>
+                <li>English - B2</li>
+                <li>Russian - C2</li>
+            </ul>
         </section>
 
         <section>
@@ -47,67 +57,54 @@
 
             <hr>
             <div class="item">
-                <h3> Backend developer | EastIT</h3>
-                <p>11/2021 - Present</p>
-                <p>Work on 4cms.</p>
-                <ul>
-                    <li>Work with multiaccount marketplace app.</li>
-                    <li>Config docker env</li>
-                </ul>
+                <h3>Backend developer | Technology Company</h3>
+                <p>9/2023 - Present</p>
+                <p>High-load project utilizing DDD/CQRS, Kafka, and ClickHouse. Key focus areas include code review, system enhancements, and migration of monolithic functionalities into dedicated microservices. Successfully implemented new code quality tools and automated contract generation processes using AI.</p>
             </div>
 
             <hr>
             <div class="item">
-                <h3> Backend developer | Lovata</h3>
+                <h3>Backend developer | EastIT</h3>
+                <p>10/2022 - 9/2023</p>
+                <p>Supported the development and optimization of large-scale e-commerce platforms, managing product inventories of 7+ million SKUs. Reviewed and enhanced the codebase and server structures. Created and maintained Docker development environment. Developed internal tools including call center interface for 100+ operators built with Laravel and Asterisk.</p>
+            </div>
+
+            <hr>
+            <div class="item">
+                <h3>Backend developer | Lovata</h3>
                 <p>10/2021 - 11/2022</p>
-                <p>Work on company projects, such as websites and services. Additional, developed plugins for the shopaholic ecosystem.</p>
-                <ul>
-                    <li>Support OctoberCMS sites</li>
-                    <li>Review code and design apps</li>
-                    <li>Development and support blockchain projects</li>
-                </ul>
+                <p>Developed and reviewed the code base for a project related to cryptocurrencies. Conducted task assessments. Work on company projects, such as websites and services. Developed plugins for the shopaholic ecosystem.</p>
             </div>
 
             <hr>
-
             <div class="item">
-                <h3> Tech Lead | Studioxy</h3>
+                <h3>Tech Lead | Studioxy</h3>
                 <p>9/2019 - 9/2021</p>
-                <p>All technical questions. From hardware up to language and technology's. I was created team and integrate menagment
-                system by Atlassian. Used Jira + Bitbuket + Confluence. Talked with clients, writed technical documentation.
-                </p>
+                <p>Acted as Technical Director in a small studio. Evaluated project timelines and costs, prepared documentation and technical specifications. Led and managed the development team, conducting talent acquisition and recruitment.</p>
                 <ul>
-                    <li>Development and support all projects</li>
-                    <li>Deployment. Many CMS and Fraimworks.</li>
-                    <li>Recruiting developers, review, learn</li>
+                    <li>Made informed decisions on technology stacks and toolsets</li>
+                    <li>Conducted code reviews and provided essential project support</li>
+                    <li>Designed application architecture and database structures</li>
+                    <li>Integrated Atlassian's management system (Jira, Bitbucket, Confluence)</li>
                 </ul>
             </div>
 
             <hr>
             <div class="item">
-                <h3> Backend developer | EastIT</h3>
+                <h3>Backend developer | EastIT</h3>
                 <p>2/2017 - 8/2019</p>
-                <p>Work on company projects. The maximum time was developing an online store with 500+ sku. </p>
-                <ul>
-                    <li>Support Bitrix, Symfony, Laravel projects</li>
-                    <li>Start many small projects in different sphere</li>
-                </ul>
+                <p>Supported development of large-scale e-commerce platforms. Developed internal tools including dedicated interface for call center operators built with Laravel and Asterisk. Developed operator action logging service using Electron, enhanced API for automated cloud calling.</p>
             </div>
 
             <hr>
 
         </section>
 
-        <section >
-            <h2>Projects</h2>
-            <div>
-                <a href="https://clevercall.ru/"><span> 📞 </span>Laravel + Asterisk - call center management system</a>
-            </div>
-            <div>
-                <a href="https://zomart.ru/"><span> 🛍 </span>E-commerce - online store</a>
-            </div>
-            <div>
-                <a href="https://osago.autowish.ru/"><span> 🚗 </span>Laravel - online insurance</a>
+        <section>
+            <h2>Education</h2>
+            <div class="item">
+                <h3>Voronezhskiy Aviatsionnyy Tekhnikum Im. V.P. Chkalova</h3>
+                <p>2009 - College</p>
             </div>
         </section>
     </div>
